--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   sign_button: ^2.0.6
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  navbar_router: ^0.7.3
+  google_nav_bar: ^5.0.6
+  flutter_dotenv: ^5.1.0
+  google_generative_ai: ^0.2.2
+  image_picker: ^0.8.4+4
+  flutter_rating_bar: ^4.0.1
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
